Build REST endpoints and consume SOAP APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=LMS
+spring.datasource.url=jdbc:h2:mem:lmsdb
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+springdoc.default-support-form-data=true
+springdoc.paths-to-match=/api/**
