--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 springdoc.default-support-form-data=true
 springdoc.paths-to-match=/api/**
+com.github.ajharry69.lms.username=admin
+com.github.ajharry69.lms.password=pwd123
+com.github.ajharry69.lms.client-token=client-token
