--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 springdoc.default-support-form-data=true
 springdoc.paths-to-match=/api/**
+logging.level.com.github.ajharry69.lms=DEBUG
 com.github.ajharry69.lms.username=admin
 com.github.ajharry69.lms.password=pwd123
 com.github.ajharry69.lms.client-token=client-token
